posiGen_FullsendBox/src/objects/PM_Tool_V2__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <formula>Project_PV_Install__r.PVI_Activation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_Scheduled_Date__c</fullName>
        <formula>Project_PV_Install__r.Activation_Scheduled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activation Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_System_Size__c</fullName>
        <formula>Project_PV_Feasibility__r.PVFA_System_Size_kW__c / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual System Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Opportunity__r.Property_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aging_Since_Contract_Approved__c</fullName>
        <formula>IF(Contract_Approved_Date__c &gt; TODAY(), NULL, TODAY()- Contract_Approved_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging Since Contract Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_since_Contract_Signed__c</fullName>
        <formula>IF(Contract_Signed_Date__c &gt; TODAY(), NULL, TODAY() - Contract_Signed_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging since Contract Signed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Appr_Date__c</fullName>
        <formula>Project_PV_Removal__r.Agreement_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Comp_Date__c</fullName>
        <formula>Project_PV_Feasibility__r.Assessment_Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Req_Date__c</fullName>
        <formula>Project_PV_Feasibility__r.Assessment_Requested_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Packet_Status__c</fullName>
        <formula>TEXT(Project_PV_Install__r.Billing_Packet_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Packet Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Packet_Submitted__c</fullName>
        <formula>Project_PV_Install__r.Billing_packet_submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Packet Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Applied_For__c</fullName>
        <formula>Project_PV_Install__r.Building_Permit_Applied_For_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Permit Applied For</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Permit_received__c</fullName>
        <formula>Project_PV_Install__r.Building_Permit_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Permit received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Opportunity__r.Property_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Call__c</fullName>
        <formula>IF(INCLUDES( Opportunity__r.Touch_Milestones__c , &quot;Closing Call&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Average__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completion Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Approved_Date__c</fullName>
        <formula>Opportunity__r.Contracts_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Date__c</fullName>
        <formula>Opportunity__r.Contracts_Signed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cust_Accept_Rec_Date__c</fullName>
        <formula>Project_PV_Install__r.Customer_Acceptance_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Acceptance Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Opportunity__r.Property__r.AssessorOwnerName1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>PM Tools V2</relationshipLabel>
        <relationshipName>PM_Tools_V2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EA_Approved_Date__c</fullName>
        <formula>Project_EE_Assessment__r.EE_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Assigned_Date__c</fullName>
        <formula>Project_EE_Assessment__r.EE_Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Completed_Date__c</fullName>
        <formula>Project_EE_Assessment__r.EE_Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Project_Status__c</fullName>
        <formula>TEXT(Project_EE_Assessment__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Rebate_Submitted_Date__c</fullName>
        <formula>Project_EE_Assessment__r.EA_Rebate_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA Rebate Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Scheduled_Date__c</fullName>
        <formula>Project_EE_Assessment__r.EE_Scheduled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_St_App_Approved_Date__c</fullName>
        <formula>Project_EE_Assessment__r.EA_State_Application_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA State Application Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_St_App_Sub_Date__c</fullName>
        <formula>Project_EE_Assessment__r.EA_State_Application_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA State Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Accepted__c</fullName>
        <formula>Opportunity__r.Has_EE_as_a_Solar_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EE_Lease_Payment__c</fullName>
        <formula>Opportunity__r.Validation_EE_Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Lease Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_Approved_Date__c</fullName>
        <formula>Project_EE_Upgrade__r.EE_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EU Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Completed_Date__c</fullName>
        <formula>Project_EE_Upgrade__r.EE_Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EU Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Project_Status__c</fullName>
        <formula>TEXT(Project_EE_Upgrade__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EU Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_Scheduled_Date__c</fullName>
        <formula>Project_EE_Upgrade__r.EE_Scheduled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EU Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elec_Install_Sch_date__c</fullName>
        <formula>Project_PV_Install__r.PVI_Electrical_Scheduled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Install Scheduled date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Install_Completed_date__c</fullName>
        <formula>Project_PV_Install__r.PVI_Electrical_Installed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Install Completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Installed_Date__c</fullName>
        <formula>Project_PV_Install__r.PVI_Electrical_Installed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Applied_For__c</fullName>
        <formula>Project_PV_Install__r.Electrical_Permit_Applied_For_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Permit Applied For</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_received__c</fullName>
        <formula>Project_PV_Install__r.Electrical_Permit_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Permit received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Opportunity__r.Account_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eng_Report_Rec_Date__c</fullName>
        <formula>Project_PV_Feasibility__r.Engineering_Report_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering Report Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eng_Report_Req_Date__c</fullName>
        <formula>Project_PV_Feasibility__r.Engineering_Report_Requested_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering Report Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engineering_Required__c</fullName>
        <formula>TEXT(Project_PV_Feasibility__r.Engineering_Required__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feasibility_Completed_Date__c</fullName>
        <formula>Project_PV_Feasibility__r.Marked_Completed_On_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feasibility Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feasibility_Project_Status__c</fullName>
        <formula>TEXT(Project_PV_Feasibility__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feasibility Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feasibility_Result__c</fullName>
        <formula>TEXT(Project_PV_Feasibility__r.Result__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feasibility Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feasibility_result_call__c</fullName>
        <formula>IF(INCLUDES( Opportunity__r.Touch_Milestones__c , &quot;Feasibility Result Call&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feasibility result call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Verif_Comp_Date__c</fullName>
        <formula>Project_PV_Feasibility__r.Field_Verification_Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Verification Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Verif_Req_Date__c</fullName>
        <formula>Project_PV_Feasibility__r.Field_Verification_Requested_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Verification Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Closing_Call_Made__c</fullName>
        <formula>Opportunity__r.First_Closing_Call_Made__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Closing Call Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Intro_Call_Made__c</fullName>
        <formula>Opportunity__r.First_Intro_Call_Made__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Intro Call Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HDLC_Appr_Comp_Date__c</fullName>
        <formula>Project_PV_Install__r.HDLC_Approval_Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HDLC Approval Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HDLC_Appr_Req_Date__c</fullName>
        <formula>Project_PV_Install__r.HDLC_Approval_Requested_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HDLC Approval Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HDLC_Approval__c</fullName>
        <formula>Opportunity__r.HDLC_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HDLC Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HOA_Appr_Comp_Date__c</fullName>
        <formula>Project_PV_Install__r.HOA_Approval_Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HOA Approval Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HOA_Appr_Req_Date__c</fullName>
        <formula>Project_PV_Install__r.HOA_Approval_Requested_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HOA Approval Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HOA_Approval_Required__c</fullName>
        <formula>Opportunity__r.Are_you_in_a_Homeowner_s_Association__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HOA Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inf_Net_Meter_Inst_Date__c</fullName>
        <formula>Project_PV_Install__r.Informed_Net_Meter_Installed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Informed Net Meter Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Determination_Result__c</fullName>
        <formula>TEXT(Project_PV_Feasibility__r.Initial_Determination_Result__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Determination Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insp_Comp_With_Letter_Date__c</fullName>
        <formula>Project_PV_Install__r.Inspection_Complete_With_Letter_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Complete With Letter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Completed_Date__c</fullName>
        <formula>Project_PV_Install__r.Inspection_Complete_With_Letter_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Requested_Date__c</fullName>
        <formula>Project_PV_Install__r.Inspection_Requested_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Result__c</fullName>
        <formula>Project_PV_Install__r.Inspection_Result__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intro_Call__c</fullName>
        <formula>IF(INCLUDES( Opportunity__r.Touch_Milestones__c , &quot;Intro Call&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intro Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMI_Acceptance_Result__c</fullName>
        <formula>TEXT(Opportunity__r.LMI_Acceptance_Result__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMI Acceptance Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMI_Accpt_Rec_Date__c</fullName>
        <description>Old field name LMI_Accpt_Rec_Date</description>
        <formula>Opportunity__r.LMI_Status_Result_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMI Status Result Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMI_Accpt_Sub_Date__c</fullName>
        <formula>Opportunity__r.LMI_Application_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMI Application Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Layout_Appr_Rec_Date__c</fullName>
        <formula>Project_PV_Feasibility__r.Layout_Approval_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Layout Approval Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Layout_Appr_Sub_Date__c</fullName>
        <formula>Project_PV_Feasibility__r.Layout_Approval_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Layout Approval Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Layout_Approval_Required__c</fullName>
        <formula>Opportunity__r.Layout_Approval_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Layout Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <label>Lease Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M2_submission_date__c</fullName>
        <formula>Opportunity__r.M2_submission_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 submission date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M3_submission_date__c</fullName>
        <formula>Opportunity__r.M3_submission_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 submission date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Meter_Inst_Sch_Date__c</fullName>
        <formula>Project_PV_Install__r.Net_Meter_Install_Scheduled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Meter Install Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Meter_Inst_Verified_Date__c</fullName>
        <formula>Project_PV_Install__r.PV_Net_Meter_Install_Verified_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Meter Installed Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Numeric_ID__c</fullName>
        <formula>Opportunity__r.Opp_Numeric_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Numeric ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PM Tools V2</relationshipLabel>
        <relationshipName>PM_Tools_V2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PV_Comp_EU_Sch_Call__c</fullName>
        <formula>IF(INCLUDES( Opportunity__r.Touch_Milestones__c , &quot;PV Completion/EU Scheduling Call&quot;), TRUE, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PV Completion/EU Scheduling Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PV_Install_Status__c</fullName>
        <formula>TEXT(Project_PV_Install__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PV Install Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Lease_Payment__c</fullName>
        <formula>Opportunity__r.Lease_System_Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PV Lease Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Permanent_Removal__c</fullName>
        <formula>Project_PV_Removal__r.Permanent_Removal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Permanent Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pipeline_Stage__c</fullName>
        <formula>Opportunity__r.Pipeline_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placed_In_Service_Date__c</fullName>
        <formula>Project_PV_Install__r.PVI_Placed_In_Service_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Placed In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <formula>Opportunity__r.Account_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Completion_Date__c</fullName>
        <label>Project Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_EE_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project EE Assessment</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>PM Tools V2 (Project EE Assessment)</relationshipLabel>
        <relationshipName>PM_Tools_V21</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_EE_Upgrade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project EE Upgrade</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>PM Tools V2 (Project EE Upgrade)</relationshipLabel>
        <relationshipName>PM_Tools_V22</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>Opportunity__r.Project_Manager__r.FirstName+&apos; &apos;+Opportunity__r.Project_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_PV_Feasibility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project PV Feasibility</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>PM Tools V2</relationshipLabel>
        <relationshipName>PM_Tools_V2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_PV_Install__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project PV Install</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>PM Tools V2</relationshipLabel>
        <relationshipName>PM_Tools_V24</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_PV_Removal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project PV Removal</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>PM Tools V2 (Project PV Removal)</relationshipLabel>
        <relationshipName>PM_Tools_V23</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QC_Completed_Date__c</fullName>
        <formula>Project_PV_Install__r.QC_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QC_Passed__c</fullName>
        <formula>Project_PV_Install__r.QC_Passed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QC_Requested_Date__c</fullName>
        <formula>Project_PV_Install__r.QC_Requested_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QC_Result__c</fullName>
        <formula>Project_PV_Install__r.QC_Result__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_P_Inst_Sch_date__c</fullName>
        <formula>Project_PV_Install__r.PVI_Rails_Scheduled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R&amp;P Install Scheduled date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_P_Installed_Date__c</fullName>
        <formula>Project_PV_Install__r.PVI_Rails_Installed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R&amp;P Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_P_Removal_Date__c</fullName>
        <formula>Project_PV_Removal__r.R_P_Removal_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R&amp;P Removal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Sub_Date__c</fullName>
        <formula>Project_EE_Assessment__r.EA_Rebate_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referring_Customer__c</fullName>
        <formula>(Opportunity__r.Referring_Customer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referring Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_Project_Status__c</fullName>
        <formula>TEXT(Project_PV_Removal__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Removal Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_Project__c</fullName>
        <formula>Project_PV_Removal__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Removal Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_Reason__c</fullName>
        <formula>TEXT(Project_PV_Removal__r.Removal_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Removal Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_Scheduled_Date__c</fullName>
        <formula>Project_PV_Removal__r.Removal_Scheduled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Removal Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Created__c</fullName>
        <formula>IF(AND(Sales_Order__c!=NULL,Sales_Order__c!=&apos;&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Order Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>PM Tools V2</relationshipLabel>
        <relationshipName>PM_Tools_V2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <formula>Opportunity__r.Owner.FirstName+&apos; &apos;+Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <formula>Opportunity__r.Account_Mobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Verification_Required__c</fullName>
        <formula>TEXT(Project_PV_Feasibility__r.Site_Verification_Required__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Verification Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Prog_App_Appr_Date__c</fullName>
        <formula>Opportunity__r.State_Program_Application_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Program Application Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Prog_App_Sub_Date__c</fullName>
        <formula>Opportunity__r.State_Program_Application_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Program Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Opportunity__r.Property_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <formula>Opportunity__r.System_Size_in_KW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telemarketer__c</fullName>
        <formula>&apos;&apos;+Opportunity__r.Telemarketer__r.FirstName+&apos; &apos;+Opportunity__r.Telemarketer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telemarketer</label>
        <type>Text</type>
    </fields>
</CustomObject>